--- a/deploy/crds/injectableinitcontainer-crd.yaml
+++ b/deploy/crds/injectableinitcontainer-crd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: injectableinitcontainer.danielstepan.cz
+  name: injectableinitcontainers.danielstepan.cz
 spec:
   group: danielstepan.cz
   versions:
@@ -49,8 +49,8 @@ spec:
         status: {}
   scope: Namespaced
   names:
-    plural: injectableinitcontainer
-    singular: injectableinitcontainers
+    plural: injectableinitcontainers
+    singular: injectableinitcontainer
     kind: InjectableInitContainer
     shortNames:
       - iic
