Replace custom structs with apiv1.Container, code re-org, edit rbac, inject default initc

--- a/deploy/crds/injectableinitcontainer.yaml
+++ b/deploy/crds/injectableinitcontainer.yaml
@@ -1,7 +1,7 @@
 apiVersion: danielstepan.cz/v1
 kind: InjectableInitContainer
 metadata:
-  name: injected-init-container2
+  name: busybox-helloworld
 spec:
   image: busybox
   name: injected-busybox
