--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -12,6 +12,9 @@ rules:
 - apiGroups: [""]
   resources: ["pods"]
   verbs: ["get", "watch", "list"]
+- apiGroups: ["danielstepan.cz/v1"]
+  resources: ["injectableinitcontainers"]
+  verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
