Edit label key name enabling webhook in demo-pod

--- a/deploy/demo-pod/demo-pod.yaml
+++ b/deploy/demo-pod/demo-pod.yaml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
   name: demo-pod
   labels:
-    example-webhook-enabled: "true"
+    k8s-init-injector-webhook-enabled: "true"
   annotations:
     k8s-init-injector/inject: "true"
     k8s-init-injector/container: "busybox-helloworld"   
